--- a/Register.html
+++ b/Register.html
@@ -53,7 +53,7 @@
 
             <fieldset>
                 <legend>Chakravyuha (Treasure Hunt)</legend>
-                <label>Treasure Hunt <input type="text" id="treasureHunt" name="treasureHunt" /></label>
+                <label>Participant <input type="text" id="treasureHunt" name="treasureHunt" /></label>
             </fieldset>
 
             <fieldset>
@@ -124,5 +124,6 @@
 
     <script src="Register.js"></script>
 </body>
+
 
 </html>
