--- a/Register.html
+++ b/Register.html
@@ -66,7 +66,7 @@
                     <label>Participant 5 <input type="text" id="madAd5" name="madAd5" /></label>
                     <label>Participant 6 <input type="text" id="madAd6" name="madAd6" /></label>
                 </div>
-            </fieldset>Participant
+            </fieldset>
 
             <fieldset>
                 <legend>Vipanikriya (Marketing)</legend>
@@ -127,4 +127,5 @@
 
 
 </html>
+
 
