--- a/AboutEvent.html
+++ b/AboutEvent.html
@@ -33,7 +33,7 @@
         <div class="content-wrapper">
             <div class="quote-section">
                 <!-- <div class="decorative-line"></div> -->
-                <p class="quote">"KURUKSHETRA - Where The Worriors Meet"</p>
+                <p class="quote">"KURUKSHETRA - Where The Warriors Meet"</p>
                 <div class="decorative-line"></div>
             </div>
             <div class="content-card">
@@ -47,7 +47,7 @@
     </div>
 
     <footer style="bottom: 0;">
-        <p>&copy; 2025 KURUKSHETRA. All Rights Reserved. | Where The Worriors Meet...</p>
+        <p>&copy; 2025 KURUKSHETRA. All Rights Reserved. | Where The Warriors Meet...</p>
     </footer>
 
     <script src="Script.js"></script>
