--- a/AboutDept.html
+++ b/AboutDept.html
@@ -49,7 +49,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Kurukshetra 2.0. All Rights Reserved. | Where The Worriors Meet...</p>
+        <p>&copy; 2025 Kurukshetra. All Rights Reserved. | Where The Warriors Meet...</p>
     </footer>
 
     <script src="Script.js"></script>
