--- a/Events.html
+++ b/Events.html
@@ -49,7 +49,7 @@
                         <strong>Staff-Coordinators:</strong> 
                         <br> Mrs. Mallika  <br>
                         <a href="tel:+919945249401">+91 9945249401</a>
-                        <br> MRS. CHITRALATHA <br>
+                        <br> Mrs. Chitralatha <br>
                         <a href="tel:+919845925719">+91 9845925719</a>
                     </div>
                     <div class="coordinator">
