--- a/AboutEvent.html
+++ b/AboutEvent.html
@@ -27,6 +27,8 @@
         <a href="AboutEvent.html">About Event</a>
         <a href="AboutCollege.html">About College</a>
         <a href="AboutDept.html">About Department</a>
+        <a href="RoadMap.html">RoadMap</a>
+        <a href="FlashMob.html">FlashMob</a>
     </nav>
     
     <div class="container" style="height: 85vh;">
@@ -52,4 +54,5 @@
 
     <script src="Script.js"></script>
 </body>
+
 </html>
