--- a/Events.html
+++ b/Events.html
@@ -25,6 +25,8 @@
         <a href="AboutEvent.html">About Event</a>
         <a href="AboutCollege.html">About College</a>
         <a href="AboutDept.html">About Department</a>
+        <a href="RoadMap.html">RoadMap</a>
+        <a href="FlashMob.html">FlashMob</a>
     </nav>
 
     <section class="events" id="events">
@@ -427,4 +429,5 @@
 
     <script src="Script.js"></script>
 </body>
+
 </html>
