--- a/FlashMob.html
+++ b/FlashMob.html
@@ -238,9 +238,8 @@
         <a href="AboutEvent.html">About Event</a>
         <a href="AboutCollege.html">About college</a>
         <a href="AboutDept.html">About Department</a>
-        <a href="RoadMap.html">About Department</a>
-        <a href="FlashMob.html">About Department</a>
-
+        <a href="RoadMap.html">RoadMap</a>
+        <a href="FlashMob.html">FlashMob</a>
     </nav>
 
     <div class="container">
@@ -278,4 +277,5 @@
     </script>]
     <script src="Script.js"></script>
 </body>
+
 </html>
