--- a/RoadMap.html
+++ b/RoadMap.html
@@ -357,8 +357,8 @@
         <a href="AboutEvent.html">About Event</a>
         <a href="AboutCollege.html">About college</a>
         <a href="AboutDept.html">About Department</a>
-        <a href="RoadMap.html">About Department</a>
-        <a href="FlashMob.html">About Department</a>
+        <a href="RoadMap.html">RoadMap</a>
+        <a href="FlashMob.html">FlashMob</a>
     </nav>
 
     <main class="container">
@@ -585,4 +585,5 @@
     </main>
     <script src="Script.js"></script>
 </body>
+
 </html>
