--- a/Rules.html
+++ b/Rules.html
@@ -27,6 +27,8 @@
         <a href="AboutEvent.html">About Event</a>
         <a href="AboutCollege.html">About college</a>
         <a href="AboutDept.html">About Department</a>
+        <a href="RoadMap.html">RoadMap</a>
+        <a href="FlashMob.html">FlashMob</a>
     </nav>
 
     <div class="Rules">
@@ -185,4 +187,5 @@
     
     <script src="Script.js"></script>
 </body>
+
 </html>
