--- a/FlashMob.html
+++ b/FlashMob.html
@@ -256,7 +256,7 @@
 
         <!-- Play Button -->
         <a href="" class="play-btn">
-            <span>Play</span>
+            <span>ENTER THE ARENA</span>
         </a>
     </div>
 
@@ -279,3 +279,4 @@
 </body>
 
 </html>
+
