--- a/FlashMob.html
+++ b/FlashMob.html
@@ -255,7 +255,7 @@
         <p class="tagline">Where the warriors meet</p>
 
         <!-- Play Button -->
-        <a href="" class="play-btn">
+        <a href="https://www.instagram.com/p/DP8mNA9EyaN/?igsh=MWphMDBwZWs1ZGM0MQ==" class="play-btn">
             <span>ENTER THE ARENA</span>
         </a>
     </div>
@@ -279,4 +279,5 @@
 </body>
 
 </html>
+
 
