--- a/FlashMob.html
+++ b/FlashMob.html
@@ -255,7 +255,7 @@
         <p class="tagline">Where the warriors meet</p>
 
         <!-- Play Button -->
-        <a href="https://www.instagram.com/reel/DI5e260oux0/?igsh=aWNnOHU4dWlzOWRz" class="play-btn">
+        <a href="https://www.instagram.com/reel/DNQbl2bzAKT/?igsh=b252eGh0YnJ2ODBt" class="play-btn">
             <span>ENTER THE ARENA</span>
         </a>
     </div>
