--- a/FlashMob.html
+++ b/FlashMob.html
@@ -255,7 +255,7 @@
         <p class="tagline">Where the warriors meet</p>
 
         <!-- Play Button -->
-        <a href="https://www.instagram.com/reel/DNQbl2bzAKT/" class="play-btn">
+        <a href="" class="play-btn">
             <span>ENTER THE ARENA</span>
         </a>
     </div>
